added csrf protection. sorry ben.

--- a/views/battle.haml
+++ b/views/battle.haml
@@ -23,6 +23,7 @@
         = haml :haiku, :locals => { :haiku => @haikus.second }
 
 %form#battle-report{ :method => 'post', :action => 'battle' }
+  = csrf_tag
   %input{ :type => 'hidden', :name => 'win'}
   %input{ :type => 'hidden', :name => 'loss'}
 
